--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "create-electron-vite",
   "version": "0.0.0",
   "description": "Scaffolding Your Electron + Vite Project",
+  "bin": "index.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
