--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/caoxiemeihao/create-electron-vite/issues"
   },
-  "homepage": "https://github.com/caoxiemeihao/create-electron-vite#readme"
+  "homepage": "https://github.com/caoxiemeihao/create-electron-vite#readme",
+  "dependencies": {
+    "minimist": "^1.2.5",
+    "prompts": "^2.4.2"
+  }
 }
