--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "create-electron-vite",
   "version": "0.1.1",
   "description": "Scaffolding Your Electron + Vite Project",
+  "private": true,
+  "packageManager": "pnpm@7.5.1",
   "bin": {
-    "create-electron-vite": "index.js",
-    "cev": "index.js"
+    "create-electron-vite": "index.cjs",
+    "cev": "index.cjs"
   },
-  "main": "index.js",
+  "type": "module",
+  "engines": {
+    "node": "^14.18.0 || >=16.0.0"
+  },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "prepare": "husky install",
+    "format": "prettier --write .",
+    "build": "zx ./scripts/build.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,10 +35,25 @@
     "url": "https://github.com/caoxiemeihao/create-electron-vite/issues"
   },
   "homepage": "https://github.com/caoxiemeihao/create-electron-vite#readme",
-  "dependencies": {
-    "prompts": "^2.4.2"
-  },
   "files": [
-    "index.js"
-  ]
+    "index.cjs"
+  ],
+  "devDependencies": {
+    "@types/eslint": "^8.4.5",
+    "@types/node": "^18.6.4",
+    "@types/prompts": "^2.0.14",
+    "@vue/tsconfig": "^0.1.3",
+    "esbuild": "^0.14.53",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "pnpm": "^7.5.1",
+    "prettier": "^2.7.1",
+    "prompts": "^2.4.2",
+    "zx": "^7.0.8"
+  },
+  "lint-staged": {
+    "*.{js,ts,json}": [
+      "prettier --write"
+    ]
+  }
 }
