--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,15 @@
 {
-  "include": [
-    "src"
-  ],
-  "compilerOptions": {
-    "outDir": "dist",
-    "target": "ES2020",
-    "module": "ES2020",
-    "moduleResolution": "Node",
-    "strict": true,
-    "declaration": false,
-    "sourceMap": false,
-    "noUnusedLocals": true,
-    "esModuleInterop": true
-  }
+    "compilerOptions": {
+        "outDir": "dist",
+        "target": "ES2020",
+        "module": "ES2020",
+        "moduleResolution": "Node",
+        "strict": true,
+        "skipLibCheck": true,
+        "declaration": false,
+        "sourceMap": false,
+        "noUnusedLocals": true,
+        "esModuleInterop": true
+    },
+    "include": ["src"]
 }
