--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,16 @@
 {
-    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": ["config:base", "schedule:weekly", "group:allNonMajor", ":semanticCommitTypeAll(chore)"],
-    "rangeStrategy": "bump",
-    "labels": ["dependencies"],
-    "ignoreDeps": ["typescript"]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "config:base",
+    "schedule:weekly",
+    "group:allNonMajor",
+    ":semanticCommitTypeAll(chore)"
+  ],
+  "rangeStrategy": "bump",
+  "labels": [
+    "dependencies"
+  ],
+  "ignoreDeps": [
+    "typescript"
+  ]
 }
