--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "fs-extra": "^11.1.0",
     "kolorist": "^1.6.0",
     "prompts": "^2.4.2"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.11.18",
     "@types/prompts": "^2.4.2",
     "typescript": "^4.9.4",
