--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "unbuild",
     "prepublishOnly": "npm run build",
     "lint": "eslint .",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "dependencies": {
     "fs-extra": "^11.1.0",
