--- a/package.json
+++ b/package.json
@@ -31,24 +31,27 @@
     "starter"
   ],
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "watch": "vite build --watch",
     "build": "vite build",
     "prepublishOnly": "npm run build",
-    "lint": "eslint .",
     "test": "vitest run"
   },
   "dependencies": {
     "prompts": "^2.4.2"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.11.18",
     "@types/prompts": "^2.4.2",
     "execa": "^7.1.1",
+    "fs-extra": "^11.1.1",
     "typescript": "^4.9.4",
     "vite": "^4.3.9",
     "vitest": "^0.29.3"
   },
   "engines": {
     "node": "^14.18.0 || >=16.0.0"
-  }
+  },
+  "packageManager": "pnpm@8.6.0"
 }
