chore: add engines in package.json

--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "lint": "eslint .",
     "test": "vitest run"
   },
+  "engines": {
+    "node": "^18.0.0 || >=20.0.0"
+  },
   "dependencies": {
     "prompts": "^2.4.2"
   },
