--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "prompts": "^2.4.2"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
+    "@types/node": "^22.1.0",
     "@types/prompts": "^2.4.9",
-    "execa": "^8.0.1",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.9",
-    "vitest": "^1.5.0"
+    "execa": "^9.3.0",
+    "pnpm": "9.7.0",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.0",
+    "vitest": "^2.0.5"
   },
-  "packageManager": "pnpm@8.0.0"
+  "packageManager": "pnpm@9.7.0"
 }
