--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
   "devDependencies": {
     "@types/node": "^22.1.0",
     "@types/prompts": "^2.4.9",
+    "electron": "^33.0.2",
     "execa": "^9.3.0",
+    "playwright": "^1.48.2",
     "pnpm": "9.7.0",
     "typescript": "^5.5.4",
     "vite": "^5.4.0",
